# screenfix

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: screenfix-tasks-yolo.md  screenshot.md  start-daemon.md  status.md  stop-daemon.md  tasks.md
docs/: index.html
npm/: package-lock.json  package.json
npm/lib/: doctor.js  init.js  uninstall.js  update.js
npm/python/screenfix/: annotation_window.py  clipboard_watcher.py  daemon.py  mcp_server.py
npm/templates/commands/: screenfix-list-tasks.md  screenfix-start.md  screenfix-status.md  screenfix-stop.md  screenfix-tasks-next.md  screenfix-tasks-yolo.md
screenfix/: __init__.py  annotation_window.py  capture.py  config.py  daemon.py  hotkey.py  mcp_server.py  task_tracker.py
